--- a/src/epub/text/the-debut-of-battling-billson.xhtml
+++ b/src/epub/text/the-debut-of-battling-billson.xhtml
@@ -58,8 +58,8 @@
 			<p>“Willie Billson,” I suggested. “Rather snappy.”</p>
 			<p>Ukridge considered the proposal seriously, with knit brows, as becomes a manager.</p>
 			<p>“Too frivolous,” he decided at length. “Might be all right for a bantam, but⁠—no, I don’t like it. I was thinking of something like Hurricane Hicks or Rock-Crusher Riggs.”</p>
-			<p>“Don’t do it,” I urged, “or you’ll kill his career right from the start. You never find a real champion with one of these fancy names. Bob Fitzsimmons, Jack Johnson, James J. Corbett, James J. Jeffries⁠—”</p>
-			<p>“James J. Billson?”</p>
+			<p>“Don’t do it,” I urged, “or you’ll kill his career right from the start. You never find a real champion with one of these fancy names. Bob Fitzsimmons, Jack Johnson, James <abbr epub:type="z3998:given-name">J.</abbr> Corbett, James <abbr epub:type="z3998:given-name">J.</abbr> Jeffries⁠—”</p>
+			<p>“James <abbr epub:type="z3998:given-name">J.</abbr> Billson?”</p>
 			<p>“Rotten.”</p>
 			<p>“You don’t think,” said Ukridge, almost with timidity, “that Wildcat Wix might do?”</p>
 			<p>“No fighter with an adjective in front of his name ever boxed in anything except a three-round preliminary.”</p>
