--- a/src/epub/text/the-level-business-head.xhtml
+++ b/src/epub/text/the-level-business-head.xhtml
@@ -10,7 +10,7 @@
 			<h2 epub:type="title">The Level Business Head</h2>
 			<p>Another beaker of port, laddie?” urged Stanley Featherstonehaugh Ukridge, hospitably.</p>
 			<p>“Thanks.”</p>
-			<p>“One more stoup of port for Mr. Corcoran, Baxter. You may bring the coffee, cigars, and liqueurs to us in the library in about a quarter of an hour.”</p>
+			<p>“One more stoup of port for <abbr>Mr.</abbr> Corcoran, Baxter. You may bring the coffee, cigars, and liqueurs to us in the library in about a quarter of an hour.”</p>
 			<p>The butler filled my glass and melted away. I looked about me dizzily. We were seated in the spacious dining-room of Ukridge’s Aunt Julia’s house on Wimbledon Common. A magnificent banquet had wound its way to a fitting finish, and the whole thing seemed to me inexplicable.</p>
 			<p>“I don’t understand this,” I said. “How do I come to be sitting here, bursting with rich food paid for by your aunt?”</p>
 			<p>“Perfectly simple, laddie. I expressed a desire for your company to-night, and she at once consented.”</p>
