[Editorial] Modernize hyphenation and spelling

--- a/src/epub/text/the-level-business-head.xhtml
+++ b/src/epub/text/the-level-business-head.xhtml
@@ -13,7 +13,7 @@
 			<p>“One more stoup of port for <abbr>Mr.</abbr> Corcoran, Baxter. You may bring the coffee, cigars, and liqueurs to us in the library in about a quarter of an hour.”</p>
 			<p>The butler filled my glass and melted away. I looked about me dizzily. We were seated in the spacious dining-room of Ukridge’s Aunt Julia’s house on Wimbledon Common. A magnificent banquet had wound its way to a fitting finish, and the whole thing seemed to me inexplicable.</p>
 			<p>“I don’t understand this,” I said. “How do I come to be sitting here, bursting with rich food paid for by your aunt?”</p>
-			<p>“Perfectly simple, laddie. I expressed a desire for your company to-night, and she at once consented.”</p>
+			<p>“Perfectly simple, laddie. I expressed a desire for your company tonight, and she at once consented.”</p>
 			<p>“But why? She has never let you invite me here before. She can’t stand me.”</p>
 			<p>Ukridge sipped his port.</p>
 			<p>“Well, the fact of the matter is, Corky,” he said, in a burst of confidence, “things have been occurring recently in the home which have resulted in what you might call the dawning of a new life as far as Aunt Julia and I are concerned. It is not too much to say that she now eats out of my hand and is less than the dust beneath my chariot wheels. I will tell you the story, for it will be of help to you in your journey through the world. It is a story which shows that, be the skies never so black, nothing can harm a man provided that he has a level business head. Tempests may lour⁠—”</p>
@@ -55,12 +55,12 @@
 			<p>What sources of revenue had I, I asked myself. George Tupper, if tactfully approached, is generally good for a fiver; and you, no doubt, had it been a matter of a few shillings or half a sovereign, would gladly have leaped into the breach. But fifty quid! A large sum, laddie. It wanted thinking over, and I devoted the whole force of my intelligence to the problem.</p>
 			<p>Oddly enough, the one source of supply that had never presented itself to me was my Aunt Julia. As you know, she has warped and peculiar ideas about money. For some reason or other she will never give me a cent. And yet it was my Aunt Julia who solved my problem. There is a destiny in these matters, Corky, a sort of fate.</p>
 			<p>When I got back to Wimbledon, I found her looking after her packing; for she was off next morning on one of those lecture tours she goes in for.</p>
-			<p>“Stanley,” she said to me, “I nearly forgot. I want you to look in at Murgatroyd’s, in Bond Street, to-morrow and get my diamond brooch. They are re-setting it. Bring it back and put it in my bureau drawer. Here is the key. Lock the drawer and send the key to me by registered post.”</p>
-			<p>And so, you see, everything was most satisfactorily settled. Long before my aunt came back the Waterloo Cup would be run for, and I should have acquired vast affluence. All I had to do was to have a duplicate key made, so that I could put the brooch in the drawer when I had redeemed it. I could see no flaw in the scheme of things. I saw her off at Euston, sauntered round to Murgatroyd’s, collected the brooch, sauntered off to the pawnbroker’s, put the brooch up the spout, and walked out, for the first time in many weeks in a sound financial position. I rang up Joe the Lawyer on the ’phone, closed the deal about the dog, and there I was, with my foot on the ladder of Fortune.</p>
+			<p>“Stanley,” she said to me, “I nearly forgot. I want you to look in at Murgatroyd’s, in Bond Street, tomorrow and get my diamond brooch. They are resetting it. Bring it back and put it in my bureau drawer. Here is the key. Lock the drawer and send the key to me by registered post.”</p>
+			<p>And so, you see, everything was most satisfactorily settled. Long before my aunt came back the Waterloo Cup would be run for, and I should have acquired vast affluence. All I had to do was to have a duplicate key made, so that I could put the brooch in the drawer when I had redeemed it. I could see no flaw in the scheme of things. I saw her off at Euston, sauntered round to Murgatroyd’s, collected the brooch, sauntered off to the pawnbroker’s, put the brooch up the spout, and walked out, for the first time in many weeks in a sound financial position. I rang up Joe the Lawyer on the phone, closed the deal about the dog, and there I was, with my foot on the ladder of Fortune.</p>
 			<hr/>
-			<p>Butin this world, Corky, you never know. That is the thing I always try to impress on every young fellow starting out in life⁠—that you never know. It was about two days later that the butler came to me in the garden and said a gentleman wished to speak to me on the ’phone.</p>
-			<p>I shall always remember that moment. It was a lovely, still evening, and I was sitting in the garden under a leafy tree, thinking beautiful thoughts. The sun was setting in a blaze of gold and crimson; the little birds were chirping their heads off; and I was half-way through the whisky-and-soda of a lifetime. I recollect that, an instant before Baxter came out to fetch me, I had just been thinking how peaceful and wonderful and perfect the world was.</p>
-			<p>I went to the ’phone.</p>
+			<p>Butin this world, Corky, you never know. That is the thing I always try to impress on every young fellow starting out in life⁠—that you never know. It was about two days later that the butler came to me in the garden and said a gentleman wished to speak to me on the phone.</p>
+			<p>I shall always remember that moment. It was a lovely, still evening, and I was sitting in the garden under a leafy tree, thinking beautiful thoughts. The sun was setting in a blaze of gold and crimson; the little birds were chirping their heads off; and I was halfway through the whisky-and-soda of a lifetime. I recollect that, an instant before Baxter came out to fetch me, I had just been thinking how peaceful and wonderful and perfect the world was.</p>
+			<p>I went to the phone.</p>
 			<p>“Hullo!” said a voice.</p>
 			<p>It was Joe the Lawyer. And Baxter had said it was a gentleman.</p>
 			<p>“Are you there?” said this bloke Joe.</p>
@@ -80,7 +80,7 @@
 			<p>“Then what about my fifty pounds?”</p>
 			<p>“I keep that.”</p>
 			<p>“What!”</p>
-			<p>“Of course I keep it. Once a sale’s gone through, it’s gone through. I know my law. That’s why the boys call me Joe the Lawyer. But I’ll tell you what I’ll do. You send me a letter, releasing all rights in that dog, and I’ll give you a fiver. I’ll be robbing myself, but I’m like that. Big-hearted old Joe, I am, and that’s all there is about it.”</p>
+			<p>“Of course I keep it. Once a sale’s gone through, it’s gone through. I know my law. That’s why the boys call me Joe the Lawyer. But I’ll tell you what I’ll do. You send me a letter, releasing all rights in that dog, and I’ll give you a fiver. I’ll be robbing myself, but I’m like that. Bighearted old Joe, I am, and that’s all there is about it.”</p>
 			<p>“What did the dog die of?”</p>
 			<p>“Pewmonia.”</p>
 			<p>“I don’t believe he’s dead at all.”</p>
@@ -93,13 +93,13 @@
 			<p>“Good morning,” said this disease, beaming. “What a heavenly day! One could almost fancy oneself out in the country, couldn’t one? Even at so short a distance from the heart of the City one seems to sense in the air a freshness which one cannot get in London, can one? I’ve come for your aunt’s brooch.”</p>
 			<p>I braced myself up with a hand on the piano.</p>
 			<p>“You’ve what?” I said.</p>
-			<p>“To-night is the dance of the Pen and Ink Club, and I wired to your aunt to ask if I might borrow her brooch, and she has written to say that I may. It’s in her bureau.”</p>
+			<p>“Tonight is the dance of the Pen and Ink Club, and I wired to your aunt to ask if I might borrow her brooch, and she has written to say that I may. It’s in her bureau.”</p>
 			<p>“Which is, most unfortunately, locked.”</p>
 			<p>“Your aunt sent me the key. I have it in my bag.”</p>
 			<p>She opened her bag, Corky, and at this moment my guardian angel, who had been lying down on his job pretty considerably for the last week or so, showed a sudden flash of speed. The door was open, and through it at this juncture there trickled one of my aunt’s Pekes. You will recollect my aunt’s Pekes. I pinched them once, to start a Dog College.</p>
 			<p>This animal gazed at the female, and the female went off like a soda-water bottle.</p>
 			<p>“Oh, the sweet thing!” she bubbled.</p>
-			<p>She put the bag down and swooped on the dog. He tried to side-step, but she had him.</p>
+			<p>She put the bag down and swooped on the dog. He tried to sidestep, but she had him.</p>
 			<p>“Oh, the tweetums!” she cried.</p>
 			<p>And, her back being turned, Corky, I nipped to the bag, found the key, trousered it, and back to position one.</p>
 			<p>Presently she came to the surface again.</p>
@@ -120,13 +120,13 @@
 			<p>You cannot fathom the psychology of these blighters, Corky. If you will believe me, the chief reason why he would not lend me this paltry sum appeared to be a fear of what people would say if they heard about it.</p>
 			<p>“Lend you fifty quid?” he said, in a sort of stunned way. “Who, me? Silly I’d look, wouldn’t I, lending you fifty quid!”</p>
 			<p>“But you don’t mind looking silly.”</p>
-			<p>“Having all the boys saying I was a soft-hearted fool.”</p>
+			<p>“Having all the boys saying I was a softhearted fool.”</p>
 			<p>“A man of your stamp doesn’t care what fellows like that say,” I urged. “You’re too big. You can afford to despise them.”</p>
 			<p>“Well, I can’t afford to lend any fifty quids. I’d never hear the last of it.”</p>
 			<p>I simply can’t understand this terror of public opinion. Morbid, I call it. I told him I would keep the thing a dead secret⁠—and, if he thought it safer, not even give him a line in writing to acknowledge the debt; but no, there was no tempting him.</p>
 			<p>“I’ll tell you what I will do,” he said.</p>
 			<p>“Twenty quid?”</p>
-			<p>“No, not twenty quid. Nor ten quid, either. Nor five quid. Nor one quid. But I’ll give you a lift back as far as Sandown in my car to-morrow, that’s what I’ll do.”</p>
+			<p>“No, not twenty quid. Nor ten quid, either. Nor five quid. Nor one quid. But I’ll give you a lift back as far as Sandown in my car tomorrow, that’s what I’ll do.”</p>
 			<p>From the way he spoke, you would have thought he was doing me the best turn one man had ever done another. I was strongly inclined to reject his offer with contempt. The only thing that decided me to accept was the thought that, if he had as good a day at Sandown as he had had at Lewes, his better nature might after all assert itself even at the eleventh hour. I mean to say, even a bookie must have a melting mood occasionally; and if one came to Joe the Lawyer I wanted to be on the spot.</p>
 			<p>“Start from here at eleven sharp. If you aren’t ready, I’ll go without you.”</p>
 			<p>This conversation, Corky, had taken place in the saloon bar of the Coach and Horses at Lewes; and, having said these few words, the bloke Joe popped off. I stayed on to have one more, feeling the need of it after the breakdown of the business negotiations; and the fellow behind the bar got chatty.</p>
@@ -172,7 +172,7 @@
 			<p>“Gerroutofit!” said Joe.</p>
 			<p>The dog edged forward. Then, in a tentative sort of way, he barked. And Joe seemed to lose his head completely. Instead of trying to conciliate the animal, he picked up a stone and threw it.</p>
 			<p>Well, you simply can’t do that sort of thing to a dog you don’t know in his own garden.</p>
-			<p>It was the satchel that saved Joe. It shows the lengths to which fear will drive a man, Corky; and if I hadn’t seen it with my own eyes I wouldn’t have believed it. But it’s the truth that, as that dog came leaping up in a businesslike way that it did me good to watch, Joe the Lawyer, having given one look over his shoulder at the gate and decided that he couldn’t make it, uttered a piercing cry and flung considerably over two hundred quid in bank-notes at the animal. The satchel took him low down on the chest, got entangled in his legs, and held him up. And while he was trying to unscramble himself, Joe nipped to the gate and slammed it behind him.</p>
+			<p>It was the satchel that saved Joe. It shows the lengths to which fear will drive a man, Corky; and if I hadn’t seen it with my own eyes I wouldn’t have believed it. But it’s the truth that, as that dog came leaping up in a businesslike way that it did me good to watch, Joe the Lawyer, having given one look over his shoulder at the gate and decided that he couldn’t make it, uttered a piercing cry and flung considerably over two hundred quid in banknotes at the animal. The satchel took him low down on the chest, got entangled in his legs, and held him up. And while he was trying to unscramble himself, Joe nipped to the gate and slammed it behind him.</p>
 			<p>It was only then that he seemed to realize what a perfect chump he had made of himself.</p>
 			<p>“Gawblimey!” said Joe.</p>
 			<p>The dog left the satchel and came to the gate. He shoved his nose as far through the bars as he could manage, and made a noise like a saxophone.</p>
@@ -253,9 +253,9 @@
 			<p>“Now, listen, listen, listen!” said the bloke Joe.</p>
 			<p>“I’ll tell you what I’ll do,” I said. “And this is a firm offer. One hundred pounds, if paid within the minute. After that the price will go up.”</p>
 			<p>Corky, old horse, I have in my time extracted various sums of money from various people, and some of them have given cheerfully of their abundance and others have unbelted in a manner that you might call wry. But never in the whole of my career have I beheld a fellow-human being cough up in quite the spirit that this bloke Joe the Lawyer did. He was a short-necked man, and there was one moment when I thought his blood-pressure was going to be too much for him. He turned a rather vivid shade of maroon, and his lips trembled as if he were praying. But in the end he dipped into the satchel and counted out the money.</p>
-			<p>“Thanks,” I said. “Well, good-bye.”</p>
+			<p>“Thanks,” I said. “Well, goodbye.”</p>
 			<p>He seemed to be waiting for something.</p>
-			<p>“Good-bye,” I said again. “I don’t want to hurt your feelings, laddie, but I must decline to continue in your society. We are nearing civilization now, and at any moment some friend of mine might see me in your car, which would jeopardize my social prestige. I will walk to the nearest railway station.”</p>
+			<p>“Goodbye,” I said again. “I don’t want to hurt your feelings, laddie, but I must decline to continue in your society. We are nearing civilization now, and at any moment some friend of mine might see me in your car, which would jeopardize my social prestige. I will walk to the nearest railway station.”</p>
 			<p>“But, gawblimey⁠—!”</p>
 			<p>“Now what?”</p>
 			<p>“Aren’t you going to take that dog out of the car?” he said, specifying what sort of a dog it was in his opinion. He also added a few remarks in a derogatory spirit about myself.</p>
@@ -268,7 +268,7 @@
 			<p>“Take it or leave it,” I said. “It’s all the same to me.”</p>
 			<p>Whereupon he produced the stipulated sum, and I opened the door and hauled the dog out. And Joe got in without a word and drove off. And that, Corky, is the last I have seen of the man. Nor do I wish to see him again. He is slippery, Corky. Not honest. A man to avoid.</p>
 			<p>I took the dog back to the cottage, and bellowed for the bearded cove.</p>
-			<p>“I sha’n’t want this, after all,” I said. “You can have him.”</p>
+			<p>“I shan’t want this, after all,” I said. “You can have him.”</p>
 			<p>“Ah?”</p>
 			<p>“I don’t want this dog.”</p>
 			<p>“Ah! Well, you won’t get your five shillings back.”</p>
@@ -308,7 +308,7 @@
 			<p>“You did.”</p>
 			<p>“I⁠—I⁠—well, I’m sorry.”</p>
 			<p>“You may well be, Aunt Julia,” I said.</p>
-			<p>And, pursuing my advantage, I ground the woman into apologetic pulp beneath what practically amounted to an iron heel. And in that condition, Corky, she still remains. How long it will last one cannot say, but for the time being I am the blue-eyed boy and I have only to give utterance to my lightest whim to have her jump six feet to fulfil it. So, when I said I wanted to ask you to dinner here to-night, she practically smiled. Let us go into the library, old horse, and trifle with the cigars. They are some special ones I had sent up from that place in Piccadilly.</p>
+			<p>And, pursuing my advantage, I ground the woman into apologetic pulp beneath what practically amounted to an iron heel. And in that condition, Corky, she still remains. How long it will last one cannot say, but for the time being I am the blue-eyed boy and I have only to give utterance to my lightest whim to have her jump six feet to fulfil it. So, when I said I wanted to ask you to dinner here tonight, she practically smiled. Let us go into the library, old horse, and trifle with the cigars. They are some special ones I had sent up from that place in Piccadilly.</p>
 		</article>
 	</body>
 </html>
