--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -55,6 +55,9 @@
 						<li>
 							<a href="text/buttercup-day.xhtml">Buttercup Day</a>
 						</li>
+						<li>
+							<a href="text/the-level-business-head.xhtml">The Level Business Head</a>
+						</li>
 					</ol>
 				</li>
 				<li>
