--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Ukridge Stories</i><br/>
-			was published between 1924 and 1925 by<br/>
+			was published between 1924 and 1926 by<br/>
 			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr epub:type="z3998:given-name">P. G.</abbr> Wodehouse</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/61507">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/ukridge00pgw_images">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/ukridge00pgw_images">Internet Archive</a> and the <a href="https://catalog.hathitrust.org/Record/100492999">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Portrait of Paul Léautaud</i>,<br/>
 			a painting completed in 1915 by<br/>
