--- a/src/epub/text/the-level-business-head.xhtml
+++ b/src/epub/text/the-level-business-head.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="the-level-business-head" epub:type="se:short-story">
 			<h2 epub:type="title">The Level Business Head</h2>
-			<p>Another beaker of port, laddie?” urged Stanley Featherstonehaugh Ukridge, hospitably.</p>
+			<p>“Another beaker of port, laddie?” urged Stanley Featherstonehaugh Ukridge, hospitably.</p>
 			<p>“Thanks.”</p>
 			<p>“One more stoup of port for <abbr>Mr.</abbr> Corcoran, Baxter. You may bring the coffee, cigars, and liqueurs to us in the library in about a quarter of an hour.”</p>
 			<p>The butler filled my glass and melted away. I looked about me dizzily. We were seated in the spacious dining-room of Ukridge’s Aunt Julia’s house on Wimbledon Common. A magnificent banquet had wound its way to a fitting finish, and the whole thing seemed to me inexplicable.</p>
