--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,9 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/61507">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/ukridge00pgw_images">Internet Archive</a> and the <a href="https://catalog.hathitrust.org/Record/100492999">HathiTrust Digital Library</a>.</p>
+			<a href="https://archive.org/details/ukridge00pgw_images">Internet Archive</a><br/>
+			and the<br/>
+			<a href="https://catalog.hathitrust.org/Record/100492999">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Portrait of Paul Léautaud</i>,<br/>
 			a painting completed in 1915 by<br/>
