--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -72,25 +72,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
-				</li>
-				<li>
-					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
-				</li>
-				<li>
-					<a href="text/ukridges-dog-college.xhtml" epub:type="bodymatter z3998:fiction">Ukridge Stories</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/ukridges-dog-college.xhtml" epub:type="bodymatter">Ukridge Stories</a>
 				</li>
 			</ol>
 		</nav>
