--- a/src/epub/text/the-debut-of-battling-billson.xhtml
+++ b/src/epub/text/the-debut-of-battling-billson.xhtml
@@ -112,7 +112,7 @@
 			<p>“No,” said Ukridge, mournfully.</p>
 			<p>“What are you going to do about his future? Have you any plans?”</p>
 			<p>“Nothing definite. My aunt was looking for a companion to attend to her correspondence and take care of the canary last time I saw her. I might try to get the job for him.”</p>
-			<p>And with a horrid, mirthless laugh. Stanley Featherstonehaugh Ukridge borrowed five shillings and passed out into the night.</p>
+			<p>And with a horrid, mirthless laugh Stanley Featherstonehaugh Ukridge borrowed five shillings and passed out into the night.</p>
 			<p>I did not see Ukridge for the next few days, but I had news of him from our mutual friend George Tupper, whom I met prancing in uplifted mood down Whitehall.</p>
 			<p>“I say,” said George Tupper without preamble, and with a sort of dazed fervour, “they’ve given me an undersecretaryship.”</p>
 			<p>I pressed his hand. I would have slapped him on the back, but one does not slap the backs of eminent Foreign Office officials in Whitehall in broad daylight, even if one has been at school with them.</p>
